--- a/ui/index.html
+++ b/ui/index.html
@@ -9,8 +9,14 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! This is my first web app!.
+            Hi! This is my first web app!
         </div>
+
+        <div>
+        I've made some local changes!
+        </div>
+
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
