[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Hi! This is my first web app!
         </div>
 
-        <div>
+        <div class='center'>
         I've made some local changes!
         </div>
         
