--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,1 +1,27 @@
+<!doctype HTML>
+<html>
+	<head>
+		<title> Article I | Liyana </title>
+	</head>
+	<head>
+		<div>
+			<a href='/'>Home</a>
+		</div>
+		<hr>
+		<div>
+			Article One
+		</div>
+		<div>
+			<p> This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.
+			</p>
+			<p>This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.
+			</p>
+			<p>
+			This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.
+			</p>
+		</div>
+	</head>
+</html>
+
+
 
