[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,7 +3,7 @@
 	<head>
 		<title> Article I | Liyana </title>
 	</head>
-	<head>
+	<body>
 		<div>
 			<a href='/'>Home</a>
 		</div>
@@ -20,7 +20,7 @@
 			This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.
 			</p>
 		</div>
-	</head>
+	</body>
 </html>
 
 
