--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,22 +3,35 @@
 	<head>
 		<title> Article I | Liyana </title>
 	</head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+	<style>
+		.container {
+    max-width: 38rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+	</style>
 	<body>
 		<div>
-			<a href='/'>Home</a>
-		</div>
-		<hr>
-		<div>
-			Article One
-		</div>
-		<div>
-			<p> This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.
-			</p>
-			<p>This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.
-			</p>
-			<p>
-			This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.
-			</p>
+			<div>
+				<a href='/'>Home</a>
+			</div>
+			<hr>
+			<div>
+				Article One
+			</div>
+			<div>
+				<p> This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.
+				</p>
+				<p>This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.
+				</p>
+				<p>
+				This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.
+				</p>
+			</div>
 		</div>
 	</body>
 </html>
