--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,8 +4,7 @@
 		<title> Article I | Liyana </title>
 	</head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-
-
+	<link rel='stylesheet' ref='ui/style.css'>
 	<body>
 		<div class='container'>
 			<div>
