--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,7 +3,7 @@
 	<head>
 		<title> Article I | Liyana </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    	<link rel='stylesheet' ref='ui/style.css'>
+    	<link rel='stylesheet' href='/ui/style.css'>
 	</head>
 	
 	<body>
