[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title> Article III | Liyana </title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+    	<link rel='stylesheet' href='/ui/style.css'>
+
 	</head>
 	<head>
 		<div>
