--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -6,7 +6,7 @@
     	<link rel='stylesheet' href='/ui/style.css'>
 
 	</head>
-	<head>
+	<body>
 		<div>
 			<a href='/'>Home</a>
 		</div>
@@ -17,7 +17,7 @@
 		<div>
 			<p> This is article three.</p>
 		</div>
-	</head>
+	</body>
 </html>
 
 
